<resources>
    <string name="app_name">TalkGap</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="app_name_custom">- Talk Gap -</string>
    <string name="camera">Camera</string>
    <string name="trim_video">Trim Video</string>
    <string name="Cut">cut</string>
    <string name="min_max">Select min of 4 and max of 16</string>
    <string name="current_photo">Current Photo(s) </string>
    <string name="update">Update</string>
    <string name="update_msg">The version of TalkGap you\'re using is outdated,
    you need to upgrade to the latest version to enjoy the latest features of our app.</string>
    <string name="talkgap">- TalkGap</string>
    <string name="dear_user">Dear User</string>
    <string name="check_for_updates">check for updates</string>
    <string name="add_music">Add Music</string>
    <string name="filters">Filters</string>
    <string name="effects">Effects</string>
    <string name="themes">Themes</string>
    <string name="next">next</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="done">Done</string>
    <string name="pic_message">Photo(s) Selected 0</string>
</resources>
